--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,11 @@ dependencies:
   font_awesome_flutter:
   provider:
   flutter_localization: ^0.1.14
-
+  fluttertoast: ^8.1.1
+  cloud_firestore: ^4.3.0
+  firebase_auth: ^4.2.3
+  firebase_core: ^2.4.0
+  firebase_storage: ^11.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
